--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.11.8",
     "react": "^18.3.1",
